--- a/tools/license-checker/Cargo.toml
+++ b/tools/license-checker/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.72"
-cargo-license = "0.7.0"
-cargo_metadata = "0.21.0"
-# glob = "0.3.1"
-# reqwest = { version = "0.12.8", features = ["blocking"] }
-# serde = { version = "1.0.175", features = ["derive"] }
-# serde_json = "1.0.104"
-# similar = { version = "2.2.1", features = ["text", "inline", "bytes"] }
-# toml = "0.8.2"
+cargo-about = "0.8.2"
+itertools = "0.14.0"
+krates = "0.20.0"
+reqwest = "0.12.24"
+semver = "1.0.27"
+serde = { version = "1.0.228", features = ["derive"] }
+spdx = "0.12.0"
+toml = "0.9.8"
