--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -1,5 +1,9 @@
 name: 'build tools setup action'
 inputs:
+  os:
+    description: 'os'
+    required: true
+    default: ''
   toolchain:
     description: 'toolchain'
     required: false
@@ -25,3 +29,10 @@ runs:
     - uses: taiki-e/install-action@v2
       with:
         tool: cargo-make
+
+    - name: install dependencies
+      shell: bash
+      if: inputs.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libpcap-dev
