--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-build
         with:
+          os: ${{ matrix.os }}
           components: "rustfmt, clippy"
       - uses: taiki-e/install-action@v2
         with:
