--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ concurrency:
 jobs:
   changed-files:
     name: changed-files
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     outputs:
       src: ${{ steps.changed-files-yaml.outputs.src_any_changed }}
     steps:
@@ -53,7 +53,7 @@ jobs:
   all-tests-passed:
     if: ${{ always() }}
     name: all-tests-passed
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     needs: test
     steps:
       - if: ${{ needs.test.result == 'failure' || needs.test.result == 'cancelled' }}
@@ -65,7 +65,7 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     if: ${{ always() && !cancelled() && !failure() && github.actor == 'dependabot[bot]' }}
     steps:
       - run: gh pr merge --rebase --auto "$PR_URL"
