add GitHub Actions dependency updates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
 
   auto-merge:
     needs:
-      - test
+      - all-tests-passed
     permissions:
       pull-requests: write
       contents: write
